--- a/car.html
+++ b/car.html
@@ -10,7 +10,7 @@
     <nav id="navbar">
         <ul>
         <a class="active" href="mainpage.html"><li>Home</li></a>
-        <a href="destinations.html"><li>Routes</li></a>
+        <a href="destination.html"><li>Routes</li></a>
         <a href="car.html"><li>Career</li></a>
         <a href="fac.html"><li>Facilities</li></a>
         <a href="booking.html"><li>Booking</li></a>
