--- a/deck.html
+++ b/deck.html
@@ -10,16 +10,16 @@
 <header>
     <nav id="navbar">
         <ul>
-        <a class="active" href="#"><li>Home</li></a>
-        <a href="#"><li>Routes</li></a>
+        <a class="active" href="mainpage.html"><li>Home</li></a>
+        <a href="destination.html"><li>Routes</li></a>
         <a href="car.html"><li>Career</li></a>
         <a href="fac.html"><li>Facilities</li></a>
-        <a href="#"><li>Booking</li></a>
+        <a href="booking.html"><li>Booking</li></a>
+        <a href="act.html"><li>Activities</li></a>
         </ul>
     </nav>
+</header>
 <body>
-      </header> 
-  <!-- Header and Image section -->
   <div class="section-wrapper">
     <div class="header-section">
       <h1>DECK AND TECHNICAL CREW</h1>
