--- a/deck.html
+++ b/deck.html
@@ -40,7 +40,7 @@
       <img src="captain.jpg" alt="server">
     </div>
     <div class="quote-box">
-      <p>"“Weather shifts, tides rise, and stars disappear—but what never changes is our commitment to the people aboard. Every voyage is a story, and I’m honored to help write it."</p>
+      <p>"Weather shifts, tides rise, and stars disappear—but what never changes is our commitment to the people aboard. Every voyage is a story, and I’m honored to help write it."</p>
       <span>– Max Gabrial, Captian</span>
     </div>
   </div>
@@ -108,7 +108,7 @@
     </div>
   
     <div class="card">
-      <img src="Electrician.jpg" alt="Captain">
+      <img src="captain.jpg" alt="Captain">
       <div class="container">
         <h4><b>Captain</b></h4>
         <p>
